cmake_minimum_required(VERSION 3.20)

project(FzHttp VERSION 0.0.0 LANGUAGES CXX)

set(FzHttp_MAIN_PROJECT OFF)
if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
  set(FzHttp_MAIN_PROJECT ON)
endif()

if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
    message(FATAL_ERROR "In-source builds are not allowed")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(FZ_HTTP_PUBLIC_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)

set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} ../FzNet/build/Debug-arm)
message("CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}")
find_package(fz_net REQUIRED)

add_subdirectory(src)
add_subdirectory(test)
